# finance

./: .env  .gitignore  Cargo.toml
entities/: Cargo.toml
entities/src/: exp_rec_list.rs  expence.rs  expense.rs  lib.rs  mod.rs  prelude.rs  receipt.rs  session.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240701_104404_add_table_expences.rs  m20240906_142826_addd_user_table.rs  m20240906_142837_addd_receipts_table.rs  m20240906_143558_add_user_id_to_expense.rs  m20240906_150646_addd_session_table.rs  m20240906_175111_add_exp_rec_view.rs
migration/src/sqls/: initial.sql
src/: auth.rs  cli.rs  main.rs  schema.rs  specific.rs  utils.rs
src/authorization/: auth.rs
src/specific/: expence.rs  expense.rs  expense_with_receipt.rs  receipt.rs
