[package]
name = "untitled2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

entities = { path = "./entities" }
migration = { path = "./migration" }

dotenv = "0.15.0"
clap = { version = "4.5.8", features = ["derive", "env"] }
tracing = { version = "0.1.40", features = ["log"] }
axum = "0.7.5"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.9.1", features = ["v4"] }


[workspace]
members = [ "./entities", "./migration"]