[package]
name = "finance-server"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

entities = { path = "./entities" }
migration = { path = "./migration" }

dotenv = "0.15.0"
clap = { version = "4.5.8", features = ["derive", "env"] }
tracing = { version = "0.1.40", features = ["log"] }
axum = "0.7.5"
utoipa = { version = "4.2.3", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
thiserror = "1.0.61"
serde_json = "1.0.119"
async-trait = "0.1.80"
chrono = { version = "0.4.38",features = ["now", "serde"] }
validator = "0.18.1"
futures = "0.3.21"
config = "0.14.0"
tracing-subscriber = "0.3.18"
http = "1.1.0"
reqwest = "0.12.7"
url = "2.5.2"
aliri = "0.6.3"
aliri_clock = "0.1.4"
argon2 = "0.5.3"
nanoid="*"
[dependencies.sea-orm]
version = "0.12.15"
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"]


[workspace]
members = [ "./entities", "./migration"]